color changes updated, edit form fixed, alignment for <ul>s sorted and basically everything else except legend hover issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,7 +54,7 @@
 }
 
 body {
-  background-color: #804E49;
+  background-color: #465E70;
   color: #E7DECD;
   font-family: 'Lato', sans-serif;
 }
